BAP-4027 scrollbar fix

--- a/src/Oro/Bundle/DataGridBundle/Resources/public/css/oro.grid.less
+++ b/src/Oro/Bundle/DataGridBundle/Resources/public/css/oro.grid.less
@@ -140,11 +140,14 @@ table.grid {
   .thead-sizing-row {
     display: none;
   }
+  thead {
+    z-index: 1;
+  }
   &.floatThead-relative{
     .thead-sizing-row {
       display: block;
     }
-    .grid-container-parent {
+    .grid-scrollable-container {
       position: relative;
     }
     thead {
