--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/datagrid.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/datagrid.less
@@ -77,10 +77,15 @@
       min-width: 100%;
     }
 }
-.grid-container-parent {
+
+.other-scroll-container {
+  position: relative;
+  margin: 10px 10px 30px 10px;
+}
+.grid-scrollable-container {
   -webkit-overflow-scrolling: touch;
   overflow-scrolling: touch;
-  margin: 10px 10px 30px 10px;
+  margin: 0;
   padding-right: 0;
   padding-left: 0;
   border: none;
